--- a/MultiLanguage/languages/RU/dictionaries/Dialogues.json
+++ b/MultiLanguage/languages/RU/dictionaries/Dialogues.json
@@ -1139,7 +1139,7 @@
     "Don't you get tired of running around on that farm all day, or whatever it is you do?": "Разве ты не устаешь от беготни на этой ферме весь день, или что ты там делаешь?",
     "I couldn't stand getting all dirty like that.": "Я бы не смогла находиться во всей этой грязи.",
     "You probably get a nice tan, though.": "Хотя, ты вероятно получишь красивый загар.",
-    "I'm feeling an urge to go shopping. Ugh! I wish there was a mall here.": "Я чувствую острое желание пройтись по магазинам. Тьфу! Хочу что здесь был торговый центр.",
+    "I'm feeling an urge to go shopping. Ugh! I wish there was a mall here.": "Я чувствую острое желание пройтись по магазинам. Тьфу! Хочу чтобы здесь был торговый центр.",
     "My sister is so weird. Sometimes I wonder if we're actually related.": "Моя сестра такая странная. Иногда я задаюсь вопросом, на самом ли деле мы родственники.",
     "There are only two things I like about this town.": "Есть только две вещи, которые я люблю в этом городе.",
     "One of them is the beach.": "Первой является пляж.",
@@ -1181,7 +1181,7 @@
     "...Maybe it'll wash up on another shore. I can't bear to think of it at the bottom of the ocean.": "...Может быть, его тело вынесет на другой берег. Я не могу перенести мысль, что он на дне океана.",
     "Him? No!": "Его? Нет!",
     "...Well, I guess I used to like Alex. But not anymore! He's immature.": "Ну, я думаю, раньше мне нравился Алекс. Но больше нет! Он еще не вырос.",
-    "What? That sounds fun, but I wouldn't want to leave Stardew Valley right now...": "Что? Звучит прикольно, но я бы не хотела уезжать из долины Стардью прямо сейчас...",
+    "What? That sounds fun, but I wouldn't want to leave Stardew Valley right now...": "Что? Звучит прикольно, но я бы не хотела уезжать из Стардью Вэлли прямо сейчас...",
     "Huh? What's an android?": "Ха? Что такое андроид?",
     "I'm going to get such a nice tan this summer.": "Этим летом я хочу красиво загореть.",
     "Ew, you're all dirty.": "Фу, ты весь в грязи.^Фу, ты вся в грязи.",
@@ -1210,7 +1210,7 @@
     "I wish I had some ice cream.": "Я бы хотела съесть немного мороженого.",
     "I spent 3 hours practicing my signature today.": "Я потратила 3 часа, практикуясь в написании моей росписи",
     "I guess that's pretty silly, huh?": "Это глупо, да?",
-    "If you stay in the sun a lot it will make your hair lighter... But you don't want to get sunburnt, either.": "Если ты на долго будешь на солнце, твои волосы посветлеют... И ты же не хочешь обгореть.",
+    "If you stay in the sun a lot it will make your hair lighter... But you don't want to get sunburnt, either.": "Если ты долго будешь на солнце, твои волосы посветлеют... И ты же не хочешь обгореть.",
     "I just want a healthy amount of sunlight. Everything in moderation, right?": "Я хочу полезную дозу солнечных лучей. Все в меру, верно?",
     "I should start reading some books instead of magazines.": "Я должна начать читать книги.",
     "It's good to learn things, isn't it?": "Это же хорошо узнавать что-то новое, правда?",
@@ -1282,7 +1282,7 @@
     "...what?": "... что?",
     "Um, if you see Alex could you tell him I'm busy today?": "Хм, если ты увидишь Алекса, не мог бы ты сказать ему, что сегодня я занята?^Хм, если ты увидишь Алекса, не могла бы ты сказать ему, что сегодня я занята?",
     "Thanks.": "Спасибо.",
-    "I wish it were warmer here in Stardew Valley.": "Я бы хотела, чтобы в долине Стардью было теплее.",
+    "I wish it were warmer here in Stardew Valley.": "Я бы хотела, чтобы в Стардью Вэлли было теплее.",
     "I could move somewhere else, but...": "Я могла бы уехать куда-нибудь еще, но...",
     "Do you think you'll ever have a pony on your farm?": "Как ты думаешь, ты когда-нибудь будешь выращивать пони на своей ферме?",
     "I'm glad you have less work to do in the winter.": "Я рада, что у тебя меньше работы зимой.",
@@ -4682,8 +4682,8 @@
     "Maybe I'll tell you my recipe one of these days.": "Возможно, я расскажу тебе свой рецепт на днях.",
     "Are you friends with Alex?": "Вы друзья с Алексом?",
     "Sometime he worries me sick.": "Когда он болеет, я волнуюсь.",
-    "Oh, hello my dear. I think of you as my own grandson now.": "Ох, привет родной. Я теперь воспринимаю тебе как ещё одного внука.",
-    "Oh, hello my hear. I think of you as my own grand-daughter now.": "Ох, привет родная. Я теперь воспринимаю тебе как свою милую внучку.",
+    "Oh, hello my dear. I think of you as my own grandson now.": "Ох, привет родной. Я теперь воспринимаю тебя как ещё одного внука.",
+    "Oh, hello my hear. I think of you as my own grand-daughter now.": "Ох, привет родная. Я теперь воспринимаю тебя как свою милую внучку.",
     "My eyesight may be poor, but my nose hasn't failed me yet!": "Мое зрение может быть плохим, но мой нос меня еще не подводил.",
     "I can smell fallen leaves and mushrooms. It reminds me of the forests I used to play in as a girl.": "Я чувствую запах, упавших листьев и грибов. Это напоминает мне о лесах, в которых я играла в детстве..",
     "Be careful you don't slip on the ice, dear.": "Будь осторожнее, чтобы не поскользнуться на льду.",
@@ -4824,7 +4824,7 @@
     "@player! Let me turn off this darned television and we can have a little chat.": "@player! Позволь мне отключить этот проклятый телевизор и мы сможем немного поболтать.",
     "So what are the young people doing these days?": "Так чем же молодые люди занимаются в наше время?",
     "You know, I shouldn't get too depressed about my legs.": "Ты знаешь, я не должен унывать из-за моих ног.",
-    "I should just be happy that I'm alive.": "Я просто должен быть счастлив, что я жив",
+    "I should just be happy that I'm alive.": "Я просто должен быть счастлив, что я жив.",
     "When you get as old as me it's a lot harder to adjust to new things.": "Когда ты стар, как я, намного сложнее приспособиться к новым вещам.",
     "One day you'll know what I mean.": "Однажды ты поймёшь, что я имею в виду.",
     "Go on, enjoy yourself while you're still young.": "Давай, гуляй пока ты еще молод.^Давай, гуляй пока ты еще молода.",
@@ -6380,19 +6380,19 @@
     "Rain muffles sound, so I can play my guitar louder without my Mom getting mad. Hehe.": "Дождь заглушает звук, поэтому я могу громче играть на гитаре, и мама не злится. Хехе.",
     "Maybe I should cook something new and exciting today. Something spicy.": "Может сегодня мне приготовить что-то новое и волнующее. Что-нибудь остренькое.",
     "Hmm... this weather makes me thirsty.": "Хм... в такую погода мне хочется пить.",
-    "Hi @player. You look like you're soaked...you poor thing!": "Привет @player.С виду ты насквозь промок...бедняга!^Привет @player.С виду ты насквозь промокла...бедняжка!",
+    "Hi @player. You look like you're soaked...you poor thing!": "Привет @player. Ой бедненький... ты же весь промок!^Привет @player. Ой бедняжка... ты же вся промокла!",
     "Sometimes when I lay in bed I can hear a distant foghorn cut through the rain.": "Иногда, когда я лежу в постели, я слышу далекий пронзительный дождь.",
     "But when I look out the window I see only a curtain of gray.": "Но когда я смотрю в окно я вижу только завесу серого.",
     "There's nothing like a glass of dry red wine on a day like this, huh?": "В такой день нет ничего лучше бокала сухого красного вина, правда?",
     "I love my job. Hehehe.": "Я люблю свою работу. Хи-хи.",
     "Rain... It's almost mythical to us. Some of us dwarves live our entire lives without ever experiencing it.": "Дождь... для нас это почти миф. Некоторые из гномов проживают всю жизнь, не познав что это такое.",
-    "Stormy days are the only time I can commune with certain elementals.": "Грозовые дни единственное время, когда я могу общаться с некоторыми элементами..",
-    "I don't expect you to understand.": "Я не жду, что ты поймёшь.",
+    "Stormy days are the only time I can commune with certain elementals.": "С некоторыми элементалями я могу общаться только в грозу.",
+    "I don't expect you to understand.": "Ладно, не бери в голову.",
     "Hi @player! Er... Read anything interesting in the library lately?": "Привет @player! Ээм...Читаешь что-нибудь интересное в библиотеке в последнее время.",
     "Heh. Well, um... I'll see you around then?": "Хех. Ну, Эм... увидимся потом?",
-    "I heard it's raining back home. Is that why you came here?": "Я слышала, как дома идет дождь. Так вот почему ты здесь?",
-    "I kind of miss the rain, actually...": "Я скучаю по дождю...",
-    "Ah, the sewers are flowing quickly today. It'll get nice and humid in here... Just how I like it.": "Ах, канализации сегодня быстро протекают. Тут станет приятно и сыро... прямо как я люблю."
+    "I heard it's raining back home. Is that why you came here?": "Я слышал, дома сейчас дождь. Ты поэтому здесь?",
+    "I kind of miss the rain, actually...": "Знаешь, а я скучаю за дождём...",
+    "Ah, the sewers are flowing quickly today. It'll get nice and humid in here... Just how I like it.": "Ах, сегодня в канализации бурные потоки. Воздух станет влажный и тяжёлый... прямо как я люблю."
   },
   "Robin": {
     "__comment": "common",
