--- a/MultiLanguage/languages/RU/dictionaries/Festivals.json
+++ b/MultiLanguage/languages/RU/dictionaries/Festivals.json
@@ -113,7 +113,7 @@
   "Rain... It's almost mythical to us. Some of us live our entire lives without ever experiencing it.": "Дождь... Для моего народа он почти легенда. Некоторые из нас старятся и умирают так и не узнав, что это такое.",
   "The affairs of mundane folk matter little to me, but the elementals like a chance to see you up close.": "Забавы обывателей меня мало интересуют, но элементалы хотели рассмотреть вас поближе.",
   "It was for them that I created this silly maze.": "Для них я и построил этот глупый лабиринт.",
-  "Oh! You found me...": "Оу! Ты нашёл меня...^Ты нашла меня...",
+  "Oh! You found me...": "Оу! Ты нашёл меня...^Оу! Ты нашла меня...",
   "The truth is, I got too scared so I came here to hide. Don't tell anyone.": "На самом деле я так испугался, что спрятался здесь. Только никому не говори.",
   "Why is there no more pumpkin ale?": "Куда делось всё тыквенное пиво?",
   "I heard it's raining back home. Is that why you came here?": "Я слышал, дома сейчас дождь. Ты поэтому здесь?",
@@ -151,7 +151,7 @@
   "We used to do a rotten egg toss...": "Раньше мы устраивали метание тухлых яиц...",
   "Mayor Lewis put an end to that pretty quick.": "Но мэр Льюис быстро избавился от этой традиции.",
   "No one really talks to me... I just come for the deviled eggs.": "Со мной обычно никто не общается... Прихожу просто поесть фаршированных яиц.",
-  "Hey! How'd you get back here?": "Эй! Как ты сюда попал?^Как ты сюда попала?",
+  "Hey! How'd you get back here?": "Эй! Как ты сюда попал?^Эй! Как ты сюда попала?",
   "Don't touch anything.": "Ничего не трогай.",
   "Abby's always loved the egg hunt, ever since she was a tiny girl.": "Эбби с самого детства обожает яичную охоту.",
   "I try to eat at least three eggs every day.": "Я стараюсь съедать хотя бы три яйца в день.",
@@ -196,11 +196,11 @@
   "I really hate dancing in front of everyone... It's so embarrassing.": "Ненавижу танцевать, когда на меня все смотрят... Мне неловко.",
   "Mom makes me do it.": "А мама меня заставляет.",
   "Ahh... The air smells so sweet with all these flowers.": "Ах... От всех этих цветов так сладко пахнет воздух.",
-  "These springtime dances can be traced back to ancient fertility rituals.": "Весенние танцы уходят корнями к древним культам плодородия..",
+  "These springtime dances can be traced back to ancient fertility rituals.": "Весенние танцы уходят корнями к древним культам плодородия.",
   "Hey... You should know about this stuff, farmer.": "Да ты, наверное, и так это знаешь, а, фермер?",
   "I like dancing, but this one is a little stilted. The old timers really love it, though.": "Мне нравятся танцы, но этот какой-то напыщенный. А вот старожилы его очень любят.",
   "Ugh...": "Тьфу...",
-  "Oh, hello there. It's nice of you to talk to me.": "Ох, здравствуй. Спасибо, что заговорил со мной.^Спасибо, что заговорила со мной.",
+  "Oh, hello there. It's nice of you to talk to me.": "Ох, здравствуй. Спасибо, что заговорил со мной.^Ох, здравствуй. Спасибо, что заговорила со мной.",
   "Spring is almost over... what a shame.": "Весна почти закончилась... жаль.",
   "What! How'd you get back here?": "Эй! А ты что тут делаешь?",
   "Don't touch anything.": "Ничего не трогай.",
@@ -213,9 +213,9 @@
   "I wonder if Emily would dance with me?": "Интересно, Эмили согласится станцевать со мной?",
   "*gulp*... I'm nervous.": "*сглатывает*... Я нервничаю.",
   "Now this is the life... Huh, kid? Sweet wine, a babbling brook, warm air... Did I mention wine?": "Вот она жизнь... Да, детка? Вино, смех, тёплый ветерок... Вино я называла?",
-  "Whoo... I'm stuffed. Hey, have you tried the red jelly yet?": "Фу-ух... Я наелась. Слушай, ты пробовал красное желе?^Слушай, ты пробовала красное желе?",
+  "Whoo... I'm stuffed. Hey, have you tried the red jelly yet?": "Фу-ух... Я наелась. Слушай, ты пробовал красное желе?^Фу-ух... Я наелась. Слушай, ты пробовала красное желе?",
   "I'm practicing my dance moves... It needs to be perfect.": "Я постоянно практикуюсь в танцах... Мои движения должны быть совершенны.",
-  "I've been flower queen for the past 5 years and I'm not ready to step off the throne just yet!": "Пять лет подряд я была Королевой цветов, и пока не готова уступать свой трон!",
+  "I've been flower queen for the past 5 years and I'm not ready to step off the throne just yet!": "Пять лет подряд я была Королевой цветов и пока не готова уступать свой трон!",
   "Are you going to be dancing today, @player?": "Ты собираешься танцевать сегодня, @player?",
   "This open field... it makes me nervous.": "Большая открытая поляна... меня от неё коробит.",
   "*whisper* Happy thoughts, Kent. Happy Thoughts.": "*шепчет*Думай о хорошем, Кент. Думай о хорошем.",
@@ -286,7 +286,7 @@
   "I'm doing my best to stay in a good mood...": "Я стараюсь оставаться в хорошем настроении...",
   "I guess it wouldn't be very nice to put something nasty in the soup...": "Думаю будет не очень хорошо положить что-то гадкое в суп...",
   "Hey, I'll take any excuse to come hang out at the beach. This weather is amazing!": "Эй, я придумаю любой повод, чтобы остаться  на пляже. Погода просто удивительна!",
-  "Oh dear... I've got sand in my socks...": "Ах,боже... У меня песок в носках...",
+  "Oh dear... I've got sand in my socks...": "Ах, боже... У меня песок в носках...",
   "The old cabin seems to be holding up well. Every time I return I half expect the thing to be rotted...": "Старый домик хорошо сохранился. Каждый раз, когда я возвращаюсь, я жду, что он сгниет.",
   "It's tiring to socialize with everyone... I'd rather watch the sea.": "Общение со всеми так утомляет... Я лучше посмотрю на море.",
   "She's unresponsive.": "Она не отвечает.",
@@ -324,8 +324,8 @@
   "These blasted sand-flies keep landing on the food!": "Мерзкие мошки так и норовят упасть в тарелку!",
   "You say it's raining up above? *gasp*": "Говоришь, наверху идёт дождь? *вздыхает*",
   "Rain... It's almost mythical to us. Some of us live our entire lives without ever experiencing it.": "Дождь... Для моего народа он почти легенда. Некоторые из нас старятся и умирают так и не узнав, что это такое.",
-  "The merpeople are curious about your festivities.": "Морским обитателям интересны наши празднецтва.",
-  "They become upset when you litter into the ocean.": "Но они очень расстраиваются, когда мы захламляем океан.",
+  "The merpeople are curious about your festivities.": "Морским обитателям интересны ваши празднецтва.",
+  "They become upset when you litter into the ocean.": "Но они очень расстраиваются, когда вы захламляете океан.",
   "Good thing I came with sunscreen.": "Хорошо, что я захватил крем от загара.",
   "I wonder if Maru could use some sunscreen on her shoulders?": "Может предложить Мару намазать плечи?",
   "I heard it's raining back home. Is that why you came here?": "Говорят, дома сейчас дождь. Ты поэтому здесь?",
