--- a/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
+++ b/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
@@ -90,7 +90,7 @@
   "Now this is just absolutely despicable.##(Is this some kind of mean joke?)": "Сейчас это просто гадко.##(Это какая-то злая шутка?)",
   "Thanks, kid.": "Спасибо, малыш.",
   "__comment": "Emily",
-  "This gift is fabulous! Thank you so much!": "Этот подарок просто сказочный! Огромное спасибо!60 62 64 66 68 70 241 428 440",
+  "This gift is fabulous! Thank you so much!": "Этот подарок просто сказочный! Огромное спасибо!",
   "Thank you! I'm feeling a positive energy from this gift.": "Спасибо! Мне очень понравился подарок.",
   "Sorry, @player. I don't like this.": "Прости, @player. Мне не нравится.",
   "This gift has a strong negative energy. I can't stand it.": "Этот подарок имеет сильную отрицательную энергию. Я этого не перенесу.",
@@ -103,13 +103,13 @@
   "Thank you. I love presents.": "Спасибо. Я люблю подарки.",
   "__comment": "Jas",
   "*gasp*...Wow!! Thank you!": "*восторженно* ...Вау! Спасибо!",
-  "I love presents! Thank you!": "Я люблю подарки! Спасибо тебе!18 60 64 70 88 232 233 234 222 223 340 344 402 418",
+  "I love presents! Thank you!": "Я люблю подарки! Спасибо тебе!",
   "Is this a gift? Oh...": "Это подарок? Ох...",
   "Ew. This is icky.": "Фу. Это ужасно.",
   "Thank you!": "Спасибо тебе!",
   "__comment": "Vincent",
   "Wow, thank you so much! This is terrific!": "Вау, огромное спасибо! Это потрясающе!",
-  "For me? Wow, thanks!": "Для меня? Ух ты, спасибо!18 60 64 70 88 232 233 234 222 223 340 344 402 418",
+  "For me? Wow, thanks!": "Для меня? Ух ты, спасибо!",
   "This isn't very fun...": "Это не очень смешно...",
   "Yuck, what is this?": "Фу, что это?",
   "Thanks!": "Спасибо!",
