--- a/MultiLanguage/languages/RU/dictionaries/_Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Events.json
@@ -3,7 +3,7 @@
   "How many star tokens would you like to buy?": "Сколько звездных жетонов вы хотите купить?",
   "How many star tokens would you like to wager?": "Сколько звездных жетонов вы хотите поставить?",
   "You don't have enough money.": "У вас недостаточно денег.",
-  "You've already bought everything in the shop!": "Вы уже купили в магазине все!",
+  "You've already bought everything in the shop!": "Вы уже скупили все товары в магазине!",
   "Choose a name": "Выберите имя",
   "__comment": "male character cat, dog, then female character cat dog's names",
   "Dudley": "Дадли",
@@ -17,36 +17,36 @@
   "Just kidding! Of course I'm dancing with you. I love you.": "Шучу! Конечно я буду танцевать с тобой. Я люблю тебя.",
   "__comment": "Penny",
   "I accept!": "Я согласна!",
-  "*whisper* Thanks for going through with the formalities, dear.": "*шепот* Спасибо за формальности, дорогой.",
+  "*whisper* Thanks for going through with the formalities, dear.": "*шепотом* Спасибо за официальное приглашение, дорогой.",
   "__comment": "Maru",
-  "Of course... *whisper* Then can we go home and snuggle?": "Конечно... *шепотом* Мы сможем прийти домой и обняться?",
+  "Of course... *whisper* Then can we go home and snuggle?": "Конечно... *шепотом* А потом подём домой обниматься, ладно?",
   "__comment": "Leah",
-  "Finally! I was starting to get worried you wanted to dance with someone else!": "Конечно! А то я заволновался что ты решила танцевать с кем то другим!",
+  "Finally! I was starting to get worried you wanted to dance with someone else!": "Наконец-то! Я уже переживать начала, что ты с другой решил танцевать!^Наконец-то! Я уже переживать начала, что ты с другой решила танцевать!",
   "__comment": "Haley",
   "*sigh*... My days of being Flower Queen are over... so it's a bittersweet dance for me.": "*вздыхает*...Мои дни, в качестве Королевы Цветов, подошли к концу... это мой последний сладкий танец, будет приправлен горечью грусти.",
-  "But, yes...": "Но, да",
+  "But, yes...": "Но, я согласна...",
   "__comment": "Sebastian",
-  "Ugh... do we have to? Alright.": "Тьфу... а может не надо? Ладно.",
+  "Ugh... do we have to? Alright.": "Уф-ф... это обязательно? Ладно.",
   "__comment": "Sam",
-  "Aw, I gotta put on that dorky suit again? I thought now that we're married... Well, alright.": "Ау, мне снова придётся одевать этот дурацкий костюм? Я думал что теперь когда мы женаты... ну, ладно.",
+  "Aw, I gotta put on that dorky suit again? I thought now that we're married... Well, alright.": "Оу, мне снова придётся одевать этот дурацкий костюм? Я думал, когда мы поженимся... Ну, ладно.",
   "__comment": "Harvey",
   "I've been looking forward to it all afternoon! You look radiant in the fresh spring air, my love.": "Ждал этого весь вечер! Выглядишь блестяще в свежем весеннем воздухе, любовь моя.",
   "__comment": "Elliott",
   "Yes... could I refuse that soft, kind face? The touch of spring-time's sweet embrace?": "Да... разве можно отказать такому доброму и приятному личику? Сладостное касание весны обволакивает тебя?",
   "__comment": "Alex",
-  "Okay, this should be fun... I hope I can remember the moves this year! It's been a while...": "Ладно, это должно быть весело... надеюсь что в этом году я вспомню как двигаться! Уже так давно не танцевал...",
+  "Okay, this should be fun... I hope I can remember the moves this year! It's been a while...": "Ладно, это должно быть весело... Надеюсь, в этом году я вспомню как двигаться! Уже так давно не танцевал...",
   "__comment": "everybody else",
   "Of course I'll dance with you!": "Конечно я буду танцевать с тобой!",
-  "You want to be my partner for the flower dance?": "Ты  хочешь танцевать со мной на фестивале?",
+  "You want to be my partner for the flower dance?": "Ты  хочешь танцевать со мной танец цветов?",
   "Okay. I look forward to it.": "Хорошо. Жду с нетерпением.",
-  "Okay! I'd love to.": "Хорошо! Я бы с удовольствием.",
+  "Okay! I'd love to.": "Хорошо! С удовольствием.",
   "I'm sorry... I already have a partner.": "Прости... у меня уже есть партнер.",
   "Someone else is using that right now.": "Кто-то еще использует это в данный момент.",
   "Play the slingshot game and win star tokens!": "Постреляй из рогатки и выиграй звёздные жетоны!",
-  "Play (50g)": "Играть (50г)",
+  "Play (50g)": "Играть (50g)",
   "Try your hand at some fishing? You could win big.": "Попробовать свои силы в рыбалке? Ты мог бы выиграть по-крупному.",
   "Ah, yes... my crystal ball is swirling with visions of your future, young one.": "О, да.... мой хрустальный шар заполнен образами твоего будущего, молодой человек.^О, да.... мой хрустальный шар заполнен образами твоего будущего, юная леди.",
-  "Read my fortune (100g)": "Узнай мою судьбу (100g)",
+  "Read my fortune (100g)": "Узнать будущее (100g)",
   "You don't have enough money to pay my fee... What a shame.": "У тебя не хватает денег на мои услуги... Какая досада.",
   "I've already read your fortune... go away.": "Я уже рассказала тебе все о твоем будущем... уходи.",
   "Trade in your star tokens for prizes?": "Обменять звездные жетоны на призы?",
@@ -94,8 +94,8 @@
   "A rusty old sword.": "Ржавый и старый меч.",
   "You got the Battered Sword! It was sent home to your toolbox.": "У вас появился Разрушенный Меч! Его пришлют к вам домой в ящик для инструментов.",
   "You got the 'Wand'! It seems like it could be a powerful item, but it's missing something... some kind of energy. It was sent home to your toolbox.": "У тебя появилась \"Палочка\"! Похоже что она очень могущественна, но чего то в ней не хватает... какой то энергии. Она отправлена тебе домой в ящик для инструментов.",
-  "Listen to Mr. Lewis's tutorial?": "Прослушать руководство Мистера Льюиса?",
-  "Which one would you prefer?": "Что бы ты предпочел?\n",
+  "Listen to Mr. Lewis's tutorial?": "Прослушать руководство мистера Льюиса?",
+  "Which one would you prefer?": "Что выбираешь?",
   "Mushrooms": "Грибы",
   "Bats": "Летучие мыши",
   "Will you adopt this cat?": "Возьмете ли вы эту кошку?",
@@ -104,7 +104,7 @@
   "For": "За",
   "Against": "Против",
   "__comment": "elliottbooktalk",
-  "I finished writing my book, and it ended up being a mystery novel! Remember when you told me you were into mystery?": "Я закончил писать свою книгу и оказалось, что это детективный роман! Помнишь, как ты сказал, что любишь тайны?^Я закончил писать свою книгу и оказалось, что это детективный роман! Помнишь как ты сказала, что любишь тайны?^",
+  "I finished writing my book, and it ended up being a mystery novel! Remember when you told me you were into mystery?": "Я закончил писать свою книгу и оказалось, что это детективный роман! Помнишь, как ты сказал, что любишь тайны?^Я закончил писать свою книгу и оказалось, что это детективный роман! Помнишь как ты сказала, что любишь тайны?",
   "Behold, '@key', a thrilling tale of deception and intrigue!": "Узри, '@key', захватывающая история с обманами и интригами!",
   "I -almost- feel like I should split the profits with you, considering how much help you gave me!": "Мне даже кажется, что я должен поделить прибыль с тобой, учитывая как сильно ты мне помог!^Мне даже кажется, что я должен поделить прибыль с тобой, учитывая как сильно ты мне помогла!",
   "I finished writing my book!": "Я закончил писать свою книгу!",
@@ -130,7 +130,7 @@
   "I can feel it now... My spirit is finally put to rest. Bless you.": "Я чувствую это... Мой дух наконец спокоен. Храни тебя Господь.",
   "The farm hasn't changed much in these past few years... but that's okay.": "Ферма не сильно изменилась с момента нашей последней встречи... но не переживай об этом.",
   "You've done a good job with the place.": "Ты хорошо поработал над этим местом.^Ты хорошо поработала над этим местом.",
-  "Not a valid gift.": "Ненадежный подарок.",
+  "Not a valid gift.": "Бесполезный подарок.",
   "Oh! So it's you?": "О! Так это ты?",
   "Ah... a @key! Thanks.": "Ах... @key! Спасибо.",
   "Ah... an @key! Thanks.": "Ах... @key! Спасибо.",
@@ -159,10 +159,10 @@
   "You added an @key to the soup.": "Вы добавили @keyV в суп.",
   "@key added a @key to the soup.": "@key добавил @keyV в суп.",
   "@key added an @key to the soup.": "@key добавил @keyV в суп.",
-  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Судьи оценили ваш выставочный стенд. Возвращайтесь к мэру Льюису за результатом!",
+  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Ваш фермерский стенд оценили. Возвращайтесь к мэру Льюису за результатом!",
   "Hmm... I see you sitting in a plush chair by the fire... you're surrounded by luxury, yet filled with lonely desperation.": "Хмм...Вижу, ты сидишь у камина на мягком креcле... вокруг тебя полно роскоши, но внутри вижу отчаяние.",
   "Ahh... yes. I see you at the beach. There's some kind of event taking place. You walk up to @key and say something funny... Hmmm... It seems like you two are good friends.": "Ахх... да. Вижу тебя на пляже. Кажется, там происходит какое-то мероприятие. Ты подходишь к @keyD и рассказываешь что-то забавное... Хммм...Кажется, вы очень близкие друзья.",
-  "Ahhh... yes. It's @key's birthday. He thought everyone forgot, but then you show up with a nice gift. What a good friend.": "Аххх... даа. У @keyR день рождения. Он думает, что все про это забыли, но затем появляешься ты и даришь приятный подарок. Какая крепкая дружба.",
+  "Ahhh... yes. It's @key's birthday. He thought everyone forgot, but then you show up with a nice gift. What a good friend.": "Ах... да-а. У @keyR день рождения. Он думает, что все про это забыли, но затем появляешься ты и даришь приятный подарок. Какая крепкая дружба.",
   "Ahhh... yes. It's @key's birthday. She thought everyone forgot, but then you show up with a nice gift. What a good friend.": "Аххх... даа. У @keyR день рождения. Она думает, что все про это забыли, но затем появляешься ты и даришь приятный подарок. Какая крепкая дружба.",
   "Hmm... I see you laying on a cot... It looks like a hospital. @key is there to keep you company while you recover. What a nice friend.": "Хмм...Вижу, как ты лежишь на койке... Кажется, это в больнице. Пока ты поправляешься, @key приглядывает за тобой. Какая крепкая дружба.",
   "Ahh... Indeed. I see you in a room, having a conversation with a man... Oh! It's @key. You seem to be close friends.": "Ахх... Конечно. Вижу тебя в комнате, ты болтаешь с парнем... А! Это @key. Кажется, вы близкие друзья.",
@@ -183,7 +183,7 @@
   "...Oh? It seems you'll be leaving more than a few heartbroken... Are you playing games with those who put their trust in you? Hmm...": "...Оу? Похоже после тебя останется несколько разбитых сердец... Ты играешь с чувствами тех, кто доверяет тебе? Хммм...",
   "The crystal ball has moved on... Now I see you harvesting a plump, ripe melon. You're on a wonderful looking farm, bursting with life!": "Хрустальный шар движется... Теперь я вижу как ты срываешь сочную, спелую дыню. Ты посреди своей чудесной фермы, полной жизни и зелени!",
   "The crystal ball has moved on... Now I see you relaxing on the riverbanks, holding a fishing pole. Oh! Looks like something big is on the line!": "Хрустальный шар движется... Теперь я вижу что ты отдыхаешь на берегу реки, с удочкой в руках.Ох! Похоже у тебя клюёт настоящий гигант!",
-  "The crystal ball has moved on... It's you... in the forest. You spot some rare and delicious mushrooms hidden beneath a clump of grass... what a find!": "Хрустальный шар движется... Вижу тебя... В лесу. Ты заметил редкий и вкусный гриб, засевший в густой траве... что за находка!^ Хрустальный шар движется... Вижу тебя... В лесу. Ты заметила редкий и вкусный гриб, засевший в густой траве... что за находка!",
+  "The crystal ball has moved on... It's you... in the forest. You spot some rare and delicious mushrooms hidden beneath a clump of grass... what a find!": "Хрустальный шар движется... Вижу тебя... В лесу. Ты заметил редкий и вкусный гриб, засевший в густой траве... что за находка!^Хрустальный шар движется... Вижу тебя... В лесу. Ты заметила редкий и вкусный гриб, засевший в густой траве... что за находка!",
   "The crystal ball has moved on... I see you somewhere dark... but there you are, inspecting a marvelous gemstone! It's glittering in the light of a small lantern.": "Хрустальный шар движется... Ты в каком то тёмном месте... внимательно  разглядываешь свои руки, в которых лежат изумительные драгоценные камни! Они слегка блестя в лучах тусклой лампы.",
   "The crystal ball has moved on... AH! You're in combat! There's something dreadful bearing down on you from the dark, but you seem more than ready to face it.": "Хрустальный шар движется...АХ! Ты дерёшься! Нечто жуткое наступает на тебя из темноты, но ты не боишься, наоборот, ты более чем готов к встрече с этим.^Хрустальный шар движется...АХ! Ты дерёшься! Нечто жуткое наступает на тебя из темноты, но ты не боишься, наоборот, ты более чем готова к встрече с этим.",
   "The crystal ball has moved on... I see you in a golden room... grinning about something. Oh, I see... You're playing some kind of game and you just can't lose!": "Хрустальный шар движется... я вижу тебя в золотой комнате... ты чему то улыбаешься. О, я вижу... Ты играешь в какую то игру в которой просто не можешь проиграть!",
@@ -196,13 +196,13 @@
   "What do you think... should I launch the boat now?": "Что ты думаешь... запустить лодку сейчас?",
   "Oh... are you already finished setting up your grange display?": "Оу... ты уже закончил подготовку своего стенда?^Оу... ты уже закончила подготовку своего стенда?",
   "Are you ready to participate in the ice fishing competition?": "Готов ли ты участвовать в соревнованиях по зимней рыбалке?",
-  "Hey, @player. I'm your secret gift-giver this year.": "Привет, @player. Я твой секретный \"подарочник\" в этом году.",
+  "Hey, @player. I'm your secret gift-giver this year.": "Привет, @player. Я твой секретный друг, для обмена подарками в этом году.",
   "Here, open it.": "Вот, открой его.",
-  "Hi. So, I'm your secret gift-giver this year.": "Привет. Итак, я твой секретный \"подарочник\" в этом году.",
+  "Hi. So, I'm your secret gift-giver this year.": "Привет. Итак, я твой секретный друг, для обмена подарками в этом году.",
   "Well? Open it!": "Ну? Открой его!",
-  "You don't like it, huh? Bah! Kids these days... no appreciation for anything. That was expensive, and I'm not made of money, you know!": "Тебе не нравится, да? Ба! Ну и дети нынче пошли... ни чего не ценят. Ты в курсе, что это стоило дорого, и я деньги не печатаю?!",
+  "You don't like it, huh? Bah! Kids these days... no appreciation for anything. That was expensive, and I'm not made of money, you know!": "Тебе не нравится, да? Ба! Ну и дети нынче пошли... ничего не ценят. Ты в курсе, что это стоило дорого и я деньги не печатаю?!",
   "It's nothing fancy, but It's the best I could afford.": "Не чего особенного, но это лучше чем я мог себе позволить.",
-  "Um, excuse me.": "Эм-м, извини. ",
+  "Um, excuse me.": "Эм-м, извини.",
   "I have a gift for you. I found it last summer when I was playing at the beach. I hope you like it.": "У меня есть подарок для тебя. Я нашел его прошлым летом на пляже. Я надеюсь тебе понравиться.",
   "I'm glad you moved here, farmer @player!": "Я рад, что ты переехал сюда, фермер @player!",
   "__comment": "Evets/*.cs",
