--- a/MultiLanguage/languages/RU/dictionaries/_Game1.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Game1.json
@@ -10,17 +10,17 @@
   "You found a =stardrop! It's strange, but the taste reminds you of  @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Странно, но вкус напоминает вам о @keyP. ^^Ваш максимальный уровень энергии увеличился.",
   "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Вы чувствуете непоколебимую связь с самой долиной. @key. ^^Ваш максимальный уровень энергии увеличился.",
   "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о... ConcernedApe? (Что ж, Спасибо!) @key. ^^Ваш максимальный уровень энергии увеличился.",
-  "Stardew Valley has crashed...": "Стардью Вэлли сломалась...",
+  "Stardew Valley has crashed...": "Stardew Valley сломалась...",
   "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчет об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
   "Dwarf King": "Король гномов",
-  "Mr. Lewis": "Мр. Льюис",
+  "Mr. Lewis": "Г-н Льюис",
   "How much do you want to bet? (You have @number club coins).": "Сколько хотите поставить? (У вас @number клубных монет).",
   "Semitones above C3:": "Полутона выше C3:",
   "Drum Sound:": "Звук барабана:",
   "Choose song:": "Выберите песню: ",
-  "How many units of fuel do you want to buy?": "Сколько единиц топлива ты хочешь купить?",
-  "How many would you like?": "Сколько бы ты хотел?",
-  "How many would you like to buy?": "Сколько бы ты хотел купить?",
+  "How many units of fuel do you want to buy?": "Сколько топлива вы хотите купить?",
+  "How many would you like?": "Сколько вы хотите?",
+  "How many would you like to buy?": "Сколько вы хотите купить?",
   "@number days played.": "Дней в игре: @number",
   "__comment here's key is a festival name": "__comment here's key is a festival name",
   "The @key has begun near Marnie's ranch.": "У Марни на ранчо начался @key.",
@@ -39,7 +39,7 @@
   "Eat this @key?": "Съесть @keyV?",
   "Eat a @key?": "Съесть @keyV?",
   "Eat an @key?": "Съесть @keyV?",
-  "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.": "Ничего не произошло. Сэнди говорила что-то вроде 'заряди его силой Йобы'.",
+  "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.": "Ничего не происходит. Сэнди говорила что-то вроде \"заряди его силой Йобы\".",
   "Place anything you want to sell in here.": "Положите сюда всё, что хотите продать.",
   "Empty the contents of your backpack into the shipping box?": "Перенести содержимое вашего рюкзака в ящик продажи?",
   "Sun": "Вс",
@@ -64,24 +64,24 @@
   "You don't have enough money to buy that.": "У вас не хватает денег на эту покупку.",
   "Gamepad mode activated": "Режим геймпада активирован",
   "Gamepad disconnected": "Геймпад отключен",
-  "Screenshot mode activated. Press 'F4' to exit.": "Режим скриншота активирован. Для выхода нажмите 'F4'.",
+  "Screenshot mode activated. Press 'F4' to exit.": "Режим скриншота активирован. Для выхода нажмите \"F4\".",
   "Next stop: Stardew Valley.": "Следующая остановка: Долина Стардью.",
   "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
   "...@player?": "..@player?",
   "__comment dont know if it used or not": "__comment dont know if it used or not",
-  "X or Left Click - Advance Dialogue": "X или Левый клик -  Выбор диалога",
+  "X or Left Click - Advance Dialogue": "X или ЛКМ -  Выбор диалога",
   "X or Left Click - Select": "X или ЛКМ - Выбрать",
-  "C or Right Click - Cancel": "C или Правый клик - Отмена",
+  "C or Right Click - Cancel": "C или ПКМ - Отмена",
   "X or Left Click - Grab | Use": "X или ЛКМ - Взять | Использовать",
-  "@newline C or Right Click - Use @key": "@newline C или Правый клик - Использовать предмет",
-  "@newline E, F, or Mouse Mid. - Remove Item From Backpack": "@newline E, F или Нажатие на колесо мыши. - Продать предмет",
+  "@newline C or Right Click - Use @key": "@newline C или ПКМ - Использовать предмет",
+  "@newline E, F, or Mouse Mid. - Remove Item From Backpack": "@newline E, F или СКМ - Продать предмет",
   "@newline Q or Enter - Open Menu": "@newline Q или Enter - Открыть меню",
   "@newline Shift - Run/Walk": "@newline Shift - Бег/Ходьба",
   "X or Left Click - Drop Item": "X или ЛКМ - Выбросить предмет",
-  "@newline C or Right Click - Use Item": "@newline C или Правый клик - Использовать предмет",
-  "@newline E, F or Mouse Mid. - Store Item": "@newline E, F или Нажатие на колесо мыши. - Продать предмет",
+  "@newline C or Right Click - Use Item": "@newline C или ПКМ - Использовать предмет",
+  "@newline E, F or Mouse Mid. - Store Item": "@newline E, F или СКМ - Продать предмет",
   "@newline Z or Mouse Wheel - Switch Item": "@newline Z или Колесико мыши - Переключить предмет",
-  "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Возвращайся позже",
+  "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Приходите позже.",
   "__comment key is server name, no need to translate": "__comment key is server name, no need to translate",
   "Connecting to @key...": "Подключение  к @key..",
   "Melting Winter Snow...": "Тает зимний снег..."
