--- a/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
@@ -22,7 +22,7 @@
   "One time I caught one the size of a baby cow!": "Один раз я поймал ее размером с теленка!",
   "Sometimes they seem so smart, it's scary.": "Иногда они кажутся настолько умными, что становится страшно.",
   "Well, here's your reward. Congratulations.": "Ну, вот ваша награда. Поздравляю.",
-  "Talk to @key": "Поговори с @keyT",
+  "Talk to @key": "Поговорите с @keyT",
   "@number/@number @key caught": "@number/@number @keyR поймано",
   "__comment": "ItemDeliveryQuest.cs",
   "__comment": "Looking for a delicious @key. I'll pay you when you bring it.@newline        -@key",
@@ -44,10 +44,10 @@
   "@key an @key to @key.@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "@key @keyV. Я хочу @key.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I am looking for": "Я ищу",
   "Need": "Требуется",
-  "serve at my afternoon tea party": "подать на моем послеобеденном чаепитии",
+  "serve at my afternoon tea party": "подать к вечернему чаепитию",
   "pair with a dry red wine this evening": "попробовать с красным сухим вином вечером",
   "enjoy with some fresh bread": "насладиться со свежим хлебом",
-  "bring to my evening book club": "принести в свой вечерний книжный клуб",
+  "bring to my evening book club": "принести на вечерние чтения",
   "enjoy after a hard day's work": "насладиться после рабочего дня",
   "eat in front of the TV": "есть перед телевизором",
   "enjoy while reading @key": "наслаждаться, читая @key",
@@ -62,10 +62,10 @@
   "serve at breakfast tomorrow": "подать завтра на завтрак",
   "roast up for dinner tonight": "жаркое на ужин",
   "pickle": "рассольник",
-  "dry for next winter": "сухой для следующей зимы",
-  "put in a hearty winter pie": "положить в вкусный зимний пирог",
-  "grill up for a summer BBQ": "мангал для летнего барбекю",
-  "skewer on a shishkebab": "шампур для шашлыка",
+  "dry for next winter": "засушить на зиму",
+  "put in a hearty winter pie": "положить в горячий зимний пирог",
+  "grill up for a summer BBQ": "зажарить на летнем барбекю",
+  "skewer on a shishkebab": "пустить на шашлык",
   "I woke up thinking about how much I want an @key for dinner.@newlineCould someone make it for me?@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я проснулся с мыслью в голове о том, как же сильно я хочу @keyV на ужин.@newlineКто-нибудь сможет приготовить это для меня?@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I woke up thinking about how much I want a @key for dinner.@newlineCould someone make it for me?@newline      -@key@newline@newline- @numberg on delivery@newline- @key": "Я проснулся с мыслью в голове о том, как же сильно я хочу @keyV на ужин.@newlineКто-нибудь сможет приготовить это для меня?@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I have a craving for a @key. Please bring one by for me.@newline       -@key@newline@newline- @numberg on delivery@newline- @key": "Я очень хочу получить @keyV. Пожалуйста, принеси мне 1 шт..@newline       -@key@newline@newline- @numberg за доставку@newline- @key",
@@ -113,7 +113,7 @@
   "I'd like to put a @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "I'd like to put an @key @key. Please deliver it some time today.@newline        -@key@newline@newline- @numberg on delivery@newline- @key": "Я хочу @key @key. Пожалуйста принесите мне сегодня в любое время.@newline -@key@newline@newline- @numberg за доставку@newline- @key",
   "on my shelf": "положить себе на полку",
-  "above the mantle": "прикрепить на накидку",
+  "above the mantle": "прикрепить к накидке",
   "under my pillow": "положить под подушку",
   "on a chain": "повесить на цепочку",
   "on my great-grandfather's tombstone": "положить на надгробие моего прадеда",
