--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -89,7 +89,6 @@
   "@number-@number Damage": "@number-@number Урон",
   "+ @number @key": "+ @number @key",
   "@number @key": "@number @key",
-  "Requires @key@newline@key": "Требуется @key@newline@key",
   "Requires @key@newline@keys": "Требуется @key@newline@key",
   "@farm Farm": "@farm Ферма",
   "Current Funds: @numberg": "Текущие средства: @numberg",
@@ -303,7 +302,7 @@
   "Welcome to Pierre's! @key": "Добро пожаловать к Пьерру! @key",
   "Got anything you want to sell?": "Хочешь что-то продать?",
   "Need some supplies?": "Нужны припасы?",
-  "Don't forget to check out my daily wallpaper and flooring selection!": "Не забудь проверять обои и напольные покрытия каждый день!",
+  "Don't forget to check out my daily wallpaper and flooring selection!": "Не забудь посмотреть ежедневную секцию обоев и напольных покрытий!",
   "What can I get for you?": "Что я могу для тебя сделать?",
   "I carry only the finest goods.": "Я меня только самые лучшие товары.",
   "I've got quality goods for sale.": "У меня хорошие товары для продажи.",
@@ -355,7 +354,7 @@
   "Wow. Zero strength. I'm actually impressed with how weak you are. Here's a star token.": "Вау. Сила на нуле. Я впечатлен твоей слабостью. Вот, держи звёздный жетон.",
   "You've started the game 100 times.": "Вы играете уже в 100-ый раз.",
   "You've started the game 1000 times!": "Вы играете уже в 1000-ый раз.",
-  "You've started the game 10,000 times! I'm impressed. -Ape": "Вы играете уже в 10,000-ый раз. Я впечатлен. -Браво",
+  "You've started the game 10,000 times! I'm impressed. -Ape": "Вы играете уже в 10,000-ый раз. Я впечатлен. -Ape",
   "Welcome back!": "С возвращением!",
   "Plug in an Xbox One or Xbox 360 controller to activate game pad mode.": "Подключите контроллер Xbox One или Xbox 360 чтобы активировать режим геймпада.",
   "Tip: Giving gifts is a good way to make friends with the residents of Stardew Valley.": "Подсказка: Дарите подарки жителям Долины Стардью ,это хороший способ, чтобы подружиться с ними.",
@@ -367,7 +366,7 @@
   "Thanks for playing!": "Спасибо за игру!",
   "Elliott's latest sentence: @newline The @key @key @key @key the other @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и другой @key",
   "Elliott's latest sentence: @newline The @key @key @key @key the @key": "Последнее предложение Эллиотта: @newline @key @key @key @key и  @key",
-  "Challenge: Beat Journey Of The Prairie King without dying.": "Испытание: пройдите Приключение Короля Прерий ни разу не умерев.",
+  "Challenge: Beat Journey Of The Prairie King without dying.": "Испытание: Пройдите Приключение Короля прерий ни разу не умерев.",
   "New": "Новая",
   "Load": "Загрузить",
   "Exit": "Выход",
