--- a/MultiLanguage/languages/RU/dictionaries/_NPC.json
+++ b/MultiLanguage/languages/RU/dictionaries/_NPC.json
@@ -89,8 +89,8 @@
   "I just don't have any energy today.": "Сегодня у меня совершенно нет сил.",
   "Life sure is different since we got married...": "Жизнь сильно изменилась, как только мы вступили в брак...",
   "What... you want me to clean? Make you a sandwich?": "Что... ты хочешь, чтобы я убирался|убиралась? Сделал|Сделала тебе бутерброд? *вздох*...",
-  "*sigh*... my skin looks horrible today.": "*вздох* ... моя кожа сегодня выглядит ужасно.",
-  "*sigh*... my hair looks horrible today.": "*вздох* ... мои волосы сегодня выглядит ужасно.",
+  "*sigh*... my skin looks horrible today.": "*вздох* ...Моя кожа сегодня ужасно выглядит.",
+  "*sigh*... my hair looks horrible today.": "*вздох* У меня сегодня жуткая причёска...",
   "It does... I can tell by the way you're looking at me.": "Это правда... Я могу это определить по тому, как ты на меня смотришь.",
   "Don't you ever feel trapped?": "Никогда не чувствовал себя как в ловушке?^Никогда не чувствовала себя как в ловушке?^",
   "*grumble*... chores...": "*ворчание*... хлопоты...",
