--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -382,14 +382,14 @@
   "The Queen Of Sauce (Re-run)": "Королева Приправ (Повтор)",
   "(Leave)": "(Выключить)",
   "Select channel:": "Выбрать канал:",
-  "Welcome to \"Livin' Off The Land\". We're back again with another tip for y'all. Now listen up:": "Добро пожаловать на программу \"Фермерская жизнь\". Мы вернулись снова с новым советом для вас. А теперь, послушайте его:",
+  "Welcome to \"Livin' Off The Land\". We're back again with another tip for y'all. Now listen up:": "Вас приветствует \"Фермерская жизнь\". Мы снова в эфире с очередным советом фермерам. Слушайте внимательно:",
   "Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева приправ! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
   "Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... Долины Стардью? Милости просим!",
   "Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... Долины Стардью? Милости просим!",
   "Ah... yes, I can hear the spirits whispering something to me...": "Ах... да, я слышу шепот духов...",
   "Welcome back to 'Welwick's Oracle'... If you seek hidden knowledge of the future, well you've come to the right place.": "Добро пожаловать в 'Оракул Вельвика'... Если вы одержимы сокрытым познанием будущего, вы попали в нужное место.",
   "Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!": "Ооо .. Я вижу проблеск в шаре предсказаний... Осколок знания из будущего!",
-  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "Добро пожаловать в Оракул Вельвика... Единственное шоу, где голос духов передается точно... к ТЕБЕ.",
+  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "Добро пожаловать к оракулу Вильвик... Единственное шоу, где голос духов передается точно... ТЕБЕ.",
   "Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...": "Приветствуем на канале KOZU 5... ваш главный источник прогнозов погоды, новостей и развлечений.^А сейчас, прогноз погоды на завтра...",
   "You already know how to cook @key.": "Вы уже умеете готовить @key.",
   "You learned how to cook '@key'!": "Вы научились готовить '@key'!",
