--- a/MultiLanguage/languages/RU/dictionaries/_Utility.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Utility.json
@@ -32,7 +32,7 @@
   "Of Dwarves": "Of Dwarves",
   "Requesting Fresh Map": "Запрашиваю свежую карту",
   "__comment": "This is final credits of game\"",
-  "Credits:@newline @newline@newline@newlineProgramming,@newlineArt, Music,@newlineSound Effects, Writing:@newline@newline-Eric Barone@newline@newline@newline@newlineSpecial Thanks:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineeveryone from HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineThanks for playing! :)": "Титры:@newline @newline@newline@newlineПрограммирование,@newlineДизайн, Музыка,@newlineЗвуковые эффекты, Сценарий:@newline@newline-Eric Barone@newline@newline@newline@newlineОтдельное спасибо:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineвсем из HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineСпасибо что играли! :)",
+  "Credits:@newline @newline@newline@newlineProgramming,@newlineArt, Music,@newlineSound Effects, Writing:@newline@newline-Eric Barone@newline@newline@newline@newlineSpecial Thanks:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineeveryone from HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineThanks for playing! :)": "Титры:@newline @newline@newline@newlineПрограммирование,@newlineДизайн, Музыка,@newlineЗвуковые эффекты, Сценарий:@newline@newline-Eric Barone@newline@newline@newline@newlineОтдельное спасибо:@newline@newline-Amber Hageman@newline-Shane Waletzko@newline-Fiddy, Nuns, Kappy &@newlineвсем из HarvestCraft@newline-Trader Joe's Organic Hummus@newline@newline@newline@newlineСпасибо, что играли! :)",
   "First Night": "Первая ночь",
   "The pages are too faded to read": "Страницы слишком нечеткие",
   "Requires construction of a Coop": "Требуется строительство курятника",
@@ -152,9 +152,9 @@
   "There are many here who've done a lot for this community, but unfortunately there can only be one Stardew Hero.": "Здесь очень много людей, которые делали всё для нашего сообщества, но стать Героем Стардью может только один.",
   "...And standing before you today are the two top contenders. @player and @key.": "... И сегодня перед вами стоят два главных соперника. @player и @key.",
   "@player moved here 2 years ago, and in that time  he's worked hard on his farm,  and has earned over @numberg in revenue.": "@player приехал сюда два года назад и очень тяжело трудился на своей ферме, при этом он заработал @numberg.^@player приехала сюда два года назад и очень тяжело трудилась на своей ферме, при этом она заработала @numberg.",
-  "...Those kinds of accomplishments could breathe life into any community!": "...Такие достижения могли бы вдохнуть жизнь в любом сообществе!",
-  "@key also moved here 2 years ago. In that time he's created one of the most productive farms I've ever seen!": "@key также переехал сюда 2 года назад. В это время он создал один из самых продуктивных ферм, которых я когда-либо видел!",
-  "@key also moved here 2 years ago. In that time she's created one of the most productive farms I've ever seen!": "@key также переехала сюда 2 года назад. В это время она создала один из самых продуктивных ферм, которых я когда-либо видел!",
+  "...Those kinds of accomplishments could breathe life into any community!": "...Такие достижения способны вдохнуть жизнь в любое сообщество!",
+  "@key also moved here 2 years ago. In that time he's created one of the most productive farms I've ever seen!": "@key также переехал сюда 2 года назад. За это время он создал одну из самых продуктивных ферм, которые когда-либо я  видел!",
+  "@key also moved here 2 years ago. In that time she's created one of the most productive farms I've ever seen!": "@key также переехала сюда 2 года назад. За это время она создала одну из самых продуктивных ферм, которые я когда-либо видел!",
   "...And funneled a large sum into my personal bank acc... er, I mean campaign fund!": "... И огромная сумма поступает на мой личный банковский счет... То есть, я хотел сказать в избирательный фонд!",
   "__comment": "rival says",
   "Thank you, Mayor, sir!": "Спасибо вам, мэр!",
