--- a/MultiLanguage/languages/RU/dictionaries/_Locations.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Locations.json
@@ -158,7 +158,7 @@
   "I bought the tastiest @key from Pierre's shop the other day.": "Я купил вкуснейший @key в магазине Пьера в другой день.",
   "He said that he grew the thing in his own backyard. I didn't know Pierre was such a talented farmer!": "Он сказал, что вырастил это на заднем дворе своего дома. Я не знал, что Пьер такой талантливый фермер!",
   "Looks like you might have some competition, huh?": "Похоже, у вам могла бы быть отличная конкуренция, ха?",
-  "He said he cooked the thing himself using local ingredients. I didn't know Pierre was such @key chef!": "Он сказал, что приготовил это блюдо, используя местные ингредиенты. Я не знал, что Пьер такой @key повар!",
+  "He said he cooked the thing himself using local ingredients. I didn't know Pierre was such @key chef!": "Он сказал, что приготовил это сам, из местных продуктов. Оказывается, Пьер ещё и @key повар!",
   "He said he found it himself while exploring the mountains. I didn't know Pierre was such a talented forager!": "Он сказал, что нашел его сам, исследуя горы. Я не знал, что Пьер такой талантливый фуражир!",
   "Hey, so I picked up one of your a fresh @key s at the store last night. My mom wanted something good for dinner.": "Эй, я купил один из свежих @key вчера вечером. Моя мама хотела на ужин что-то особое.",
   "Hey, so I picked up one of your @key @key s at the store last night. My mom wanted something good for dinner.": "Эй, я купил один из свежих @key вчера вечером. Моя мама хотела на ужин что-то особое.",
